--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,180 @@
 <% provide(:title, "Home") %>
+<% if logged_in? %>
+  <% if @article_or_question.class == Article %>
+    <div class="select_article_question_tab">
+      <div class="article_tab">
+        <%= render 'article_selected' %>
+      </div>
+      <div class="question_tab">
+        <%= render 'question_selected' %>
+      </div>
+    </div>
+    <div class="search_form">
+      <%= form_with url: searchresult_matched_articles_path, method: :get, local: true do |f| %>
+
+        <div class="search">  
+          <%= f.text_field :content, class: "search_input" %>
+          <%= f.submit '検索', class: "button_size btn btn-primary" %>
+        </div>
+
+        <div class="flex_container">
+          <div class="condition">文章の正確さ</div>
+          <% #url:https://apidock.com/rails/ActionView/Helpers/FormHelper/check_box %>
+          <% evaluations = [1,2,3,4,5] %>
+          <div class="checkbox">
+            <% evaluations.each do |eva| %>
+              <%= f.check_box :accuracy_select, { multiple: true, class: "space" }, eva, nil %>
+              <%= eva %>
+            <% end %>
+          </div>
+        </div>
+
+        <div class="flex_container">
+          <div class="condition">文章難易度</div>
+          <div class="checkbox">
+            <% evaluations.each do |eva| %>
+              <%= f.check_box :difficulty_select, { multiple: true, class: "space" }, eva, nil %>
+              <%= eva %>
+            <% end %>
+          </div> 
+        </div>
+
+
+        <div class="flex_container">
+          <div class="condition">期日</div>
+          <div class="input_term">
+              <%= f.date_field :term_from %> ~
+              <%= f.date_field :term_to %>
+          </div>
+        </div>
+      <% end %>
+    </div>
+    <% @articles.each do |article| %>
+      <div class="an_item interspace_items">
+        <div>
+          <%= link_to article.title, browsing_article_path(article) %>
+        </div>
+        <div class="flex">
+          <div>文章の正しさ:<%= article.accuracy_text %>&ensp;/&ensp;</div>
+          <div>文章難易度:<%= article.difficultylevel_text %>&ensp;/&ensp;</div>
+          <div>最終修正日:<%= article.updated_at %></div>
+        </div>
+        <div class="flex">
+          <div>小学生向け:<%= ApplicationRecord.inspect_level(article.Eschool_level) %>&ensp;/&ensp;</div>
+          <div>中学生向け:<%= ApplicationRecord.inspect_level(article.JHschool_level) %>&ensp;/&ensp;</div>
+          <div>高校生向け:<%= ApplicationRecord.inspect_level(article.Hschool_level) %></div>
+        </div>
+        <% if current_user?(article.user) %>
+          <div class="separation"></div>
+          <div>
+            <%= link_to "削除", article, method: :delete, data: { confirm: "削除しますか?" } %>
+            &ensp;|&ensp;<%= link_to "編集", edit_article_path(article) %>
+          </div>
+        <% end %>
+      </div>
+    <% end %>
+    <%== pagy_bootstrap_nav(@pagy) %>
+  <% else %>
+    <div class="select_article_question_tab">
+      <div class="article_tab">
+        <%= render 'article_selected' %>
+      </div>
+      <div class="question_tab">
+        <%= render 'question_selected' %>
+      </div>
+    </div>
+    <div class="search_form">
+      <%= form_with url: searchresult_matched_questions_path, method: :get, local: true do |f| %>
+
+        <div class="search">  
+          <%= f.text_field :content, class: "search_input" %>
+          <%= f.submit '検索', class: "button_size btn btn-primary" %>
+        </div>
+
+        <div class="flex_container">
+          <div class="condition">文章の正確さ</div>
+          <% #url:https://apidock.com/rails/ActionView/Helpers/FormHelper/check_box %>
+          <% evaluations = [1,2,3,4,5] %>
+          <div class="checkbox">
+            <% evaluations.each do |eva| %>
+              <%= f.check_box :accuracy_select, { multiple: true, class: "space" }, eva, nil %>
+              <%= eva %>
+            <% end %>
+          </div>
+        </div>
+
+        <div class="flex_container">
+          <div class="condition">文章難易度</div>
+          <div class="checkbox">
+            <% evaluations.each do |eva| %>
+              <%= f.check_box :difficulty_select, { multiple: true, class: "space" }, eva, nil %>
+              <%= eva %>
+            <% end %>
+          </div> 
+        </div>
+
+        <div class="flex_container">
+          <div class="condition">期日</div>
+          <div class="input_term">
+              <%= f.date_field :term_from %> ~
+              <%= f.date_field :term_to %>
+          </div>
+        </div>
+
+        <% select_solve = [false,true] %>
+        <div class="flex_container">
+          <div class="condition">
+            解決/未解決
+          </div>
+          <div class="checkbox">
+              <% select_solve.each do |s| %>
+                <%= f.check_box :solve, { multiple: true, class: "space" }, s, nil %>
+                <% if s %>
+                  <%= "解決" %>
+                <% else %>
+                  <%= "未解決" %>
+                <% end %>
+              <% end %>
+          </div>
+        </div>
+      <% end %>
+    </div>
+    <% @questions.each do |question| %>
+      <div class="an_item interspace_items">
+        <div>
+          <%= link_to question.title, browsing_question_path(question) %>
+        </div>
+        <div class="flex">
+          <div>文章の正しさ:<%= question.accuracy_text %>&ensp;/&ensp;</div>
+          <div>文章難易度:<%= question.difficultylevel_text %>&ensp;/&ensp;</div>
+          <div>最終修正日:<%= question.updated_at %></div>
+        </div>
+        <div class="flex">
+          <div>小学生向け:<%= ApplicationRecord.inspect_level(question.Eschool_level) %>&ensp;/&ensp;</div>
+          <div>中学生向け:<%= ApplicationRecord.inspect_level(question.JHschool_level) %>&ensp;/&ensp;</div>
+          <div>高校生向け:<%= ApplicationRecord.inspect_level(question.Hschool_level) %></div>
+        </div>
+        <% if question.solve %>
+          <div class="solve_question">
+            解決
+          </div>
+        <% else %>
+          <div class="not_solve_question">
+            未解決
+          </div>
+        <% end %>
+        <% if current_user?(question.user) %>
+          <div class="separation"></div>
+          <div>
+            <%= link_to "削除", question, method: :delete, data: { confirm: "削除しますか?" } %>
+            &ensp;|&ensp;<%= link_to "編集", edit_question_path(question) %>
+          </div>
+        <% end %>
+      </div>
+    <% end %>
+    <%== pagy_bootstrap_nav(@pagy) %>
+  <% end %>
+<% else %>
 <h1 class="appname">Understand Express</h1>
 <div class="appcontent">勉強の疑問解消アプリ</div>
 <div class="row">
@@ -42,3 +218,4 @@
   </div>
   <div class="col-sm-1"></div>
 </div>
+<% end %>
