--- a/app/views/users/following.html.erb
+++ b/app/views/users/following.html.erb
@@ -11,6 +11,8 @@
             <div>
               <%= image_tag follow.avatar.thumb_min.url , class: "avatar" %>
             </div>
+          <% else %>
+            <%= render 'shared/default_avatar' %>
           <% end %>
         </div>
         <div class="one_text">
