--- a/app/assets/stylesheets/inputform.scss
+++ b/app/assets/stylesheets/inputform.scss
@@ -9,6 +9,16 @@ textarea {
   .form-label {
     font-weight: bold;
   }
+  .edit_avatar_flex {
+    display: flex;
+    width: 40%;
+    margin: 0 auto 1%;
+    .place_adjustment {
+      height: 75px;
+      line-height: 75px;
+      margin-right: 10px;
+    }
+  }
 }
 
 .submit_button {
