--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -175,47 +175,28 @@
     <%== pagy_bootstrap_nav(@pagy) %>
   <% end %>
 <% else %>
-<h1 class="appname">Understand Express</h1>
-<div class="appcontent">勉強の疑問解消アプリ</div>
-<div class="row">
-  <div class="col-sm-1"></div>
-  <div class="col-sm-10">
-    <div class="row">
-      <div class="col-sm-4">
-        <div class="card">
-          <div class="card-body">
-            <h5 class="card-title">Login</h5>
-            <p class="card-text">アカウント保持者専用ログイン。記事作成や質問投稿などもできる。</p>
-            <ul class="button">
-              <li><%= link_to "login", login_path, class: "loginbtn" %></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-4">
-        <div class="card">
-          <div class="card-body">
-            <h5 class="card-title">Sign up</h5>
-            <p class="card-text">アカウント作成とログイン。こちらも記事作成や質問投稿などができる。</p>
-            <ul class="button">
-              <li><%= link_to "sign up", signup_path, class: "signupbtn" %></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-4">
-        <div class="card">
-          <div class="card-body">
-            <h5 class="card-title">Test login</h5>
-            <p class="card-text">認証なしのログイン。機能制限があり、質問投稿・記事作成ができない。</p>
-            <ul class="button">
-              <li><%= link_to "test login", '#', class: "testloginbtn" %></li>
-            </ul>
-          </div>
-        </div>
-      </div>
+<div class="image_display">
+  <div class="heading_and_links">
+    <div class="heading">
+      Understand
+      <br>
+      Express
+    </div>
+    <div class="login_link">
+      <%= link_to "Login", login_path %>
+    </div>
+    <div class="link_line_design">
+    </div>
+    <div class="signup_link">
+      <%= link_to "sign up", signup_path %>
+    </div>
+    <div class="link_line_design">
+    </div>
+    <div class="test_login_link">
+      <%= link_to "test login", '#', class: "testloginbtn" %>
+    </div>
+    <div class="link_line_design">
     </div>
   </div>
-  <div class="col-sm-1"></div>
 </div>
 <% end %>
