--- a/app/assets/stylesheets/commonsetting.scss
+++ b/app/assets/stylesheets/commonsetting.scss
@@ -25,7 +25,7 @@ h1 {
 }
 
 .header_flex_container {
-  background-color: aquamarine;
+  background-color: rgb(216, 110, 10);
   display: flex;
   justify-content: space-between;
   height: 4rem;
@@ -77,10 +77,10 @@ h1 {
   right: 0;
   z-index: 2;
   background: linear-gradient(to right, 
-              rgba(26, 157, 209, 0.135) 0%,
-              rgba(26, 157, 209, 0.135) calc(100vw - 300px),
-              cadetblue calc(100vw - 300px),
-              cadetblue 100%);
+              rgba(37, 25, 1, 0.135) 0%,
+              rgba(37, 25, 1, 0.135) calc(100vw - 300px),
+              rgba(165, 139, 25, 0.863) calc(100vw - 300px),
+              rgba(165, 139, 25, 0.863) 100%);
 }
 
 .not_menu {
@@ -100,14 +100,23 @@ h1 {
   height: calc(100vh - 4rem);
   display: flex;
   flex-direction: column;
+  overflow-y: auto;
+  .header_hirizontal_line {
+    width: 80%;
+    margin: 4px auto;
+    border: 1px solid white;
+  }
 }
 
 .header_menu_item {
   box-sizing: border-box;
   width: 80%;
-  height: 1.2rem;
-  margin: 6px auto;
+  height: 1.6rem;
+  margin: 0 auto;
   a {
+    font-size: 1.4rem;
+    font-weight: 600;
+    line-height: 2rem;
     color: white;
   }
 }
