--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
       </div>
       <%= yield %>
       <div>
-      <%= debug(params) if Rails.env.development? %>
+      <% # debug(params) if Rails.env.development? %>
       </div>
       <div class="container-fluid">
         <%= render 'layouts/footer' %>
