--- a/app/assets/stylesheets/commonsetting.scss
+++ b/app/assets/stylesheets/commonsetting.scss
@@ -4,7 +4,7 @@
   top: 0;
   right: 0px;
   z-index: 0;
-  margin-top: 5rem;
+  margin-top: 4rem;
 }
 
 a {
@@ -19,9 +19,16 @@ li {
   margin: 0 auto;
 }
 
-h1 {
-  text-align: center;
-  font-weight: bolder;
+a:hover {
+  color: blue;
+}
+
+/* 左に行くにつれて色が薄くなる白色の水平線 */
+.link_line_design {
+  height: 4px;
+  width: 90%;
+  margin-bottom: 4px;
+  background: linear-gradient(to right, rgba(white,1), rgba(white,0));
 }
 
 .header_flex_container {
@@ -65,6 +72,10 @@ h1 {
     font-weight: bold;
     color: white;
   }
+}
+
+.letter_white {
+  color: white;
 }
 
 // z-indexはハンバーガーメニュー表示のため。
