--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -188,12 +188,12 @@
     <div class="link_line_design">
     </div>
     <div class="signup_link">
-      <%= link_to "sign up", signup_path %>
+      <%= link_to "Sign up", signup_path %>
     </div>
     <div class="link_line_design">
     </div>
     <div class="test_login_link">
-      <%= link_to "test login", '#', class: "testloginbtn" %>
+      <%= link_to "Test login", '#' %>
     </div>
     <div class="link_line_design">
     </div>
