--- a/app/assets/stylesheets/commonsetting.scss
+++ b/app/assets/stylesheets/commonsetting.scss
@@ -153,7 +153,7 @@ body.noscroll {
 /* アバター */
 .avatar {
   border-radius: 50%;
-  border: solid 1px black;
+  border: solid 1px white;
   background-color: rgb(246, 238, 238);
 }
 
