--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -1,81 +1,79 @@
 /* ユーザーモデル関連のページ */
 /* profile_avatarの大きさは、表示するアバターのサイズを上回るようにする */
-.user_info { 
-  display: flex;
-  .user_profile {
-    width: calc(100vw - 20px - 130px - 20px - 20px);
-    height: 500px;
-    margin-left: 20px;
-    background-color: rgba($color: #15925e, $alpha: 0.7);
-    .page_name {
-      height: 30px;
-      font-size: 23px;
-      margin-bottom: 20px;
-      color: whitesmoke;
-    }
-    .user_identification {
-      display: flex;
-      height: 70px;
-      margin-bottom: 30px;
-      .profile_avatar {
-        margin-right: 15px;
-      }
-      .user_name {
-        font-size: 30px;
-        width: calc(100% - 60px - 15px);
-        overflow: auto;
-        color: whitesmoke;
-      }
-    }
-    .profile_text {
-      width: 85%;
-      height: 250px;
-      background-color: white;
-      overflow-wrap: break-word;
-      overflow-y: auto;
-      border-radius: 1rem;
-      margin: 0 auto 10px;
-    }
-    hr {
-      border: none;
-      height: 2px;
-      background: linear-gradient(90deg, rgba(0, 0, 0, 0.1) 0%,
-                rgb(0, 0, 0) 50%, rgba(0, 0, 0, 0.1) 100%);
-    }
+
+.info_display_range {
+  width: 70vw;
+  margin: 0 auto;
+  padding-top: 50px;
+  .button_and_section {
+    display: flex;
     .follow_form {
-      display: inline-block;
+      margin-top: 36px;
       margin-left: 20px;
     }
   }
-  .user_link {
-    height: 500px;
-    width: 130px;
-    margin-left: 20px;
-    margin-right: 20px;
-    background-color: rgba($color: #6a9c1a, $alpha: 0.8);
-    .profile_item {
-      margin-top: 10px;
-      margin-bottom: 10px;
-      a {
-        color: whitesmoke;
+  .profile_section {
+    font-size: 30px;
+    font-weight: 500;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    background-color: rgba(0, 0, 0, 0.86);
+    color: white;
+  }
+  .user_identification {
+    display: flex;
+    .profile_avatar_and_button {
+      margin-right: 20px;
+      width: 110px;
+      .follow_form {
+        margin-top: 10px;
       }
     }
-    .two_blocks {
-      height: 3rem;
-      border: 1px solid white;
-      border-radius: 0.5rem;
-      width: 90%;
-      margin: 10px auto;
-      .user_follow {
-        height: 1.5rem;
-        line-height: 1.5rem;
-        a {
-          color: whitesmoke;
-        }
+    .user_name {
+      font-size: 30px;
+      overflow-wrap: break-word;
+      width: calc(70vw - 110px - 20px);
+      line-height: 50px;
+    }
+  }
+  .user_selfintro {
+    overflow-wrap: break-word;
+    font-size: calc(1rem + 0.7vw);
+  }
+  .user_link {
+    display: flex;
+    flex-wrap: wrap;
+    .all_article {
+      background-color: rgba($color: #0dabd3b7, $alpha: 0.7 )
+    }
+    .all_question {
+      background-color: rgba($color: #32e5b8b7, $alpha: 0.7 )
+    }
+    .user_follow {
+      background-color: rgba($color: #8f31e7b7, $alpha: 0.7 )
+    }
+    .user_follower {
+      background-color: rgba($color: #e50e0eb7, $alpha: 0.7 )
+    }
+    .all_article, .all_question, .user_follow {
+      margin-right: 40px;
+    }
+    .all_article, .all_question, .user_follow, .user_follower {
+      margin-bottom: 15px;
+      padding: 10px;
+      text-align: center;
+      color: white;
+      a {
+        color: white;
+      }
+      a:hover {
+        color: blue;
       }
     }
   }
 }
+
+
 
 /* フォロー・フォロワーのページ。該当する人の画像・自己紹介・名前を表示 */
 
