--- a/app/assets/stylesheets/article_question.scss
+++ b/app/assets/stylesheets/article_question.scss
@@ -4,26 +4,30 @@
 
 /*showアクション：個人の全ての作成記事・質問ページ*/
 .personal_question_article_list {
-  width: 90%;
+  width: 70%;
   margin: 0 auto;
   height: auto;
   .flex {
     display: flex;
+    margin-bottom: 20px;
+    .flex_item_adjustment {
+      margin-right: 20px;
+    }
+  }
+  .pagenation {
+    margin-top: 30px;
   }
 }
 /*上のクラスに合わせた。適用要素の左端、右端の位置を統一している*/
 .sum_question_article {
-  width: 90%;
-  margin: 2.4rem auto 3.1rem;
-  font-family: impact;
+  width: 70%;
+  margin: 60px auto 0;
   font-size: 2rem;
   height: 3rem;
-  background-color: gold;
+  background-color: rgba(255, 0, 64, 0.7);
+  color: white;
 }
 
-.interspace_items {
-  margin-bottom: 0.4rem;
-}
 
 .select_article_question_tab {
   display: flex;
@@ -46,46 +50,60 @@
 }
 
 .search_form {
-  width: 90vw;
-  height: 40vh;
-  margin: 0 auto;
-  background-color: lightgray;
-  border-radius: 10px;
-  .search {
-    height: 6vh;
-    margin-bottom: 1vh;
-    .search_input {
-      height: 4.5vh;
-      width: 40%;
+  width: 70vw;
+  margin: 150px auto 0;
+  background-color: rgba(0, 0, 0, 0.7);
+  box-shadow: 10px 10px 12px rgba($color: #000000, $alpha: 0.35);
+  .adjust_position {
+    width: 90%;
+    margin: 0 auto;
+    padding-top: 20px;
+    padding-bottom: 40px;
+    .user_name {
+      color: white;
+      overflow-wrap: break-word;
+      font-size: calc(1.8rem + 0.4vw);
     }
-    .button_size {
-      height: 4vh;
+    .add_margin_bottom {
+      margin-bottom: 20px;
     }
-  }
-  .user_name {
-    height: 4vh;
-    font-size: 3vh;
-    margin-bottom: 1vh;
-  }
-  .flex_container {
-    display: flex;
-    height: 4vh;
-    margin-bottom: 2vh;
-    .condition {
-      height: 4vh;
-      font-size: 3vh;
-    }
-    .checkbox {
-      height: 1.8vh;
-      margin: auto 0;
-      .space {
-        margin-left: 4px;
+    .search {
+      height: 6vh;
+      margin-bottom: 1vh;
+      .search_input {
+        height: 4.5vh;
+        width: 40%;
+      }
+      .button_size {
+        height: 4vh;
       }
     }
-    .input_term {
-      height: 1.8vh;
-      margin: auto 0;
-      margin-left: 10px;
+    .flex_container {
+      display: flex;
+      flex-wrap: wrap;
+      margin-bottom: 2vh;
+      .condition {
+        height: 4vh;
+        font-size: 3vh;
+        color: white;
+        font-size: calc(1.6rem + 0.2vw);
+        margin-bottom: 5px;
+      }
+      .add_margin_right {
+        margin-right: 27px;
+      }
+      .checkbox {
+        height: 1.8vh;
+        margin: auto 0;
+        .space {
+          margin-left: 4px;
+        }
+      }
+      .input_term {
+        height: 1.8vh;
+        margin: auto 0;
+        margin-left: 10px;
+      }
     }
   }
 }
