--- a/app/assets/stylesheets/commonsetting.scss
+++ b/app/assets/stylesheets/commonsetting.scss
@@ -149,14 +149,19 @@ body.noscroll {
 
 /*記事リスト、質問リスト(検索結果・投稿リスト)の表示*/
 .an_item {
-  border: solid 3px #333;
-  border-radius: 10px;
-  background-color: rgb(127, 243, 185);
-  .separation {
-    background: black;
-    height: 3px;
-    margin: 5px 0;
+  background-color: rgb(235, 230, 223);
+  .content {
+    width: 90%;
+    margin: 0 auto;
+    padding: 20px 0;
+    .title a {
+      font-size: calc(1.6rem + 0.2vw);
+    }
   }
+}
+.distinction_line {
+  height: 0.8px;
+  background-color: rgba($color: #000000, $alpha: 0.5);
 }
 
 /* アバター */
