--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,46 +1,50 @@
 <% provide(:title, "personal article list")%>
-<h1>記事投稿リスト</h1>
 
 <div class="search_form">
-  <div class="user_name"><%= @user.name %>さんの記事</div>
-  <%= form_with url: searchresult_parsonal_article_path(@user), method: :get, local: true do |f| %>
-
-    <div class="search">  
-      <%= f.text_field :content, class: "search_input" %>
-      <%= f.submit '検索', class: "button_size btn btn-primary" %>
-    </div>
-
-    <div class="flex_container">
-      <div class="condition">文章の正確さ</div>
-      <% #url:https://apidock.com/rails/ActionView/Helpers/FormHelper/check_box %>
-      <% evaluations = [1,2,3,4,5] %>
-      <div class="checkbox">
-        <% evaluations.each do |eva| %>
-          <%= f.check_box :accuracy_select, { multiple: true, class: "space" }, eva, nil %>
-          <%= eva %>
-        <% end %>
+  <div class="adjust_position">
+    <div class="user_name"><%= @user.name %>さんの記事</div>
+    <div class="link_line_design add_margin_bottom"></div>
+    <%= form_with url: searchresult_parsonal_article_path(@user), method: :get, local: true do |f| %>
+      <div class="search">  
+        <%= f.text_field :content, placeholder: "記事タイトルの検索", class: "search_input" %>
+        <%= f.submit '検索', class: "button_size btn btn-primary" %>
       </div>
-    </div>
-
-    <div class="flex_container">
-      <div class="condition">文章難易度</div>
-      <div class="checkbox">
-        <% evaluations.each do |eva| %>
-          <%= f.check_box :difficulty_select, { multiple: true, class: "space" }, eva, nil %>
-          <%= eva %>
-        <% end %>
-      </div> 
-    </div>
-
-
-    <div class="flex_container">
-      <div class="condition">期日</div>
-      <div class="input_term">
-          <%= f.date_field :term_from %> ~
-          <%= f.date_field :term_to %>
+      <div class="flex_container">
+        <div class="condition">文章の正確さ</div>
+        <% #url:https://apidock.com/rails/ActionView/Helpers/FormHelper/check_box %>
+        <% evaluations = [1,2,3,4,5] %>
+        <div class="checkbox">
+          <% evaluations.each do |eva| %>
+            <%= f.check_box :accuracy_select, { multiple: true, class: "space" }, eva, nil %>
+            <span class="letter_white">
+              <%= eva %>
+            </span>
+          <% end %>
+        </div>
       </div>
-    </div>
-  <% end %>
+      <div class="flex_container">
+        <div class="condition add_margin_right">文章難易度</div>
+        <div class="checkbox">
+          <% evaluations.each do |eva| %>
+            <%= f.check_box :difficulty_select, { multiple: true, class: "space" }, eva, nil %>
+            <span class="letter_white">
+              <%= eva %>
+            </span>
+          <% end %>
+        </div> 
+      </div>
+      <div class="flex_container">
+        <div class="condition">期日</div>
+        <div class="input_term">
+            <%= f.date_field :term_from %>
+            <span class="letter_white">
+              ~
+            </span>
+            <%= f.date_field :term_to %>
+        </div>
+      </div>
+    <% end %>
+  </div>
 </div>
 
 <div class="sum_question_article">
@@ -49,30 +53,34 @@
 <div class="personal_question_article_list">
   <% if @user.articles.any? %>
     <% @articles.each do |article| %>
-      <div class="an_item interspace_items">
-        <div>
-          <%= link_to article.title, browsing_article_path(article) %>
-        </div>
-        <div class="flex">
-          <div>文章の正しさ:<%= article.accuracy_text %>&ensp;/&ensp;</div>
-          <div>文章難易度:<%= article.difficultylevel_text %>&ensp;/&ensp;</div>
-          <div>最終修正日:<%= article.updated_at %></div>
-        </div>
-        <div class="flex">
-          <div>小学生向け:<%= ApplicationRecord.inspect_level(article.Eschool_level) %>&ensp;/&ensp;</div>
-          <div>中学生向け:<%= ApplicationRecord.inspect_level(article.JHschool_level) %>&ensp;/&ensp;</div>
-          <div>高校生向け:<%= ApplicationRecord.inspect_level(article.Hschool_level) %></div>
-        </div>
-        <% if current_user?(article.user) %>
-          <div class="separation"></div>
-          <div>
-            <%= link_to "削除", article, method: :delete, data: { confirm: "削除しますか?" } %>
-            &ensp;|&ensp;<%= link_to "編集", edit_article_path(article) %>
+      <div class="an_item">
+        <div class="content">
+          <div class="title">
+            <%= link_to article.title, browsing_article_path(article) %>
           </div>
-        <% end %>
+          <div class="flex">
+            <div class="flex_item_adjustment">文章の正しさ&thinsp;/&thinsp;<%= article.accuracy_text %></div>
+            <div class="flex_item_adjustment">文章難易度&thinsp;/&thinsp;<%= article.difficultylevel_text %></div>
+            <div>最終修正日&thinsp;/&thinsp;<%= article.updated_at %></div>
+          </div>
+          <div class="flex">
+            <div class="flex_item_adjustment">小学生向け&thinsp;:&thinsp;<%= ApplicationRecord.inspect_level(article.Eschool_level) %></div>
+            <div class="flex_item_adjustment">中学生向け&thinsp;:&thinsp;<%= ApplicationRecord.inspect_level(article.JHschool_level) %></div>
+            <div>高校生向け&thinsp;:&thinsp;<%= ApplicationRecord.inspect_level(article.Hschool_level) %></div>
+          </div>
+          <% if current_user?(article.user) %>
+            <div>
+              <%= link_to "削除", article, method: :delete, data: { confirm: "削除しますか?" } %>
+              &ensp;&ensp;<%= link_to "編集", edit_article_path(article) %>
+            </div>
+          <% end %>
+        </div>
       </div>
+      <div class="distinction_line"></div>
     <% end %>
-    <%== pagy_bootstrap_nav(@pagy) %>
+    <div class="pagenation">
+      <%== pagy_bootstrap_nav(@pagy) %>
+    </div>
   <% else %>
     <strong>まだ作成されていません</strong>
   <% end %>
