updated design of a personal question list page #37

--- a/app/assets/stylesheets/questions.scss
+++ b/app/assets/stylesheets/questions.scss
@@ -11,8 +11,9 @@
   text-align: center;
   border: 1px solid blue;
   border-radius: 4px;
-  color: blue;
-  background: white;
+  color: white;
+  background: blue;
+  margin-bottom: 7px;
 }
 
 .not_solve_question {
@@ -22,8 +23,9 @@
   text-align: center;
   border: 1px solid red;
   border-radius: 4px;
-  color: red;
-  background: white;
+  color: white;
+  background: red;
+  margin-bottom: 7px;
 }
 
 // 質問閲覧ページ
