--- a/app/assets/stylesheets/article_question.scss
+++ b/app/assets/stylesheets/article_question.scss
@@ -89,8 +89,11 @@
         font-size: calc(1.6rem + 0.2vw);
         margin-bottom: 5px;
       }
-      .add_margin_right {
+      .add_margin_right_27 {
         margin-right: 27px;
+      }
+      .add_margin_right_16 {
+        margin-right: 16px;
       }
       .checkbox {
         height: 1.8vh;
