--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -4,7 +4,8 @@
   <div class="adjust_position">
     <div class="user_name"><%= @user.name %>さんの質問</div>
     <div class="link_line_design add_margin_bottom"></div>
-    <%= form_with url: searchresult_parsonal_question_path(@user), method: :get, local: true do |f| %>
+    <%= form_with url: question_path(@user), method: :get, local: true do |f| %>
+      <%= hidden_field_tag :use_form, "true" %>
       <div class="search">
         <%= f.text_field :content, class: "search_input" %>
         <%= f.submit '検索', class: "button_size btn btn-primary" %>
@@ -68,7 +69,11 @@
 </div>
 
 <div class="sum_question_article">
-  <div>question count / <%= @user.questions.count %></div>
+  <% if @matched_questions.nil? %>
+    <div>合計質問数 / <%= @user.questions.count %></div>
+  <% else %>
+    <div>検索結果 / <%= @matched_questions.count%>件</div>
+  <% end %>
 </div>
 <div class="personal_question_article_list">
   <% if @user.questions.any? %>
