--- a/app/views/static_pages/_article_selected.html.erb
+++ b/app/views/static_pages/_article_selected.html.erb
@@ -1,4 +1,4 @@
 <%= form_with(url: root_path, method: :get, local: true) do |f| %>
   <%= hidden_field_tag :model, "Article" %>
-  <%= f.submit "記事"%>
+  <%= f.submit "記事", class: color %>
 <% end %>
