--- a/app/views/static_pages/_question_selected.html.erb
+++ b/app/views/static_pages/_question_selected.html.erb
@@ -1,4 +1,4 @@
 <%= form_with(url: root_path, method: :get, local: true) do |f| %>
   <%= hidden_field_tag :model, "Question" %>
-  <%= f.submit "質問" %>
+  <%= f.submit "質問", class: color %>
 <% end %>
