--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -3,176 +3,232 @@
   <% if @article_or_question.class == Article %>
     <div class="select_article_question_tab">
       <div class="article_tab">
-        <%= render 'article_selected' %>
+        <%= render partial: 'article_selected', locals: { color: "black" } %>
       </div>
       <div class="question_tab">
-        <%= render 'question_selected' %>
+        <%= render partial: 'question_selected', locals: { color: "not_black" } %>
       </div>
     </div>
-    <div class="search_form">
-      <%= form_with url: searchresult_matched_articles_path, method: :get, local: true do |f| %>
-
-        <div class="search">  
-          <%= f.text_field :content, class: "search_input" %>
-          <%= f.submit '検索', class: "button_size btn btn-primary" %>
-        </div>
-
-        <div class="flex_container">
-          <div class="condition">文章の正確さ</div>
-          <% #url:https://apidock.com/rails/ActionView/Helpers/FormHelper/check_box %>
-          <% evaluations = [1,2,3,4,5] %>
-          <div class="checkbox">
-            <% evaluations.each do |eva| %>
-              <%= f.check_box :accuracy_select, { multiple: true, class: "space" }, eva, nil %>
-              <%= eva %>
-            <% end %>
+    <div class="home_search_form">
+      <div class="adjust_position">
+        <div class="form_name">検索フォーム</div>
+        <div class="link_line_design add_margin_bottom"></div>
+        <%= form_with url: home_path, method: :get, local: true do |f| %>
+          <div><%= hidden_field_tag :use_form, "true" %></div>
+          <div><%= hidden_field_tag :model, "Article" %></div>
+          <div class="search">
+            <%= f.text_field :content, placeholder: "記事タイトルの検索", class: "search_input" %>
+            <%= f.submit '検索', class: "button_size btn btn-primary" %>
           </div>
-        </div>
-
-        <div class="flex_container">
-          <div class="condition">文章難易度</div>
-          <div class="checkbox">
-            <% evaluations.each do |eva| %>
-              <%= f.check_box :difficulty_select, { multiple: true, class: "space" }, eva, nil %>
-              <%= eva %>
-            <% end %>
-          </div> 
-        </div>
-
-
-        <div class="flex_container">
-          <div class="condition">期日</div>
-          <div class="input_term">
-              <%= f.date_field :term_from %> ~
-              <%= f.date_field :term_to %>
+          <div class="flex_container">
+            <div class="condition">文章の正確さ</div>
+            <% #url:https://apidock.com/rails/ActionView/Helpers/FormHelper/check_box %>
+            <% evaluations = [1,2,3,4,5] %>
+            <div class="checkbox">
+              <% evaluations.each do |eva| %>
+                <%= f.check_box :accuracy_select, { multiple: true, class: "space" }, eva, nil %>
+                <span class="letter_white">
+                  <%= eva %>
+                </span>
+              <% end %>
+            </div>
           </div>
-        </div>
-      <% end %>
-    </div>
-    <% @articles.each do |article| %>
-      <div class="an_item interspace_items">
-        <div>
-          <%= link_to article.title, browsing_article_path(article) %>
-        </div>
-        <div class="flex">
-          <div>文章の正しさ:<%= article.accuracy_text %>&ensp;/&ensp;</div>
-          <div>文章難易度:<%= article.difficultylevel_text %>&ensp;/&ensp;</div>
-          <div>最終修正日:<%= article.updated_at %></div>
-        </div>
-        <div class="flex">
-          <div>小学生向け:<%= ApplicationRecord.inspect_level(article.Eschool_level) %>&ensp;/&ensp;</div>
-          <div>中学生向け:<%= ApplicationRecord.inspect_level(article.JHschool_level) %>&ensp;/&ensp;</div>
-          <div>高校生向け:<%= ApplicationRecord.inspect_level(article.Hschool_level) %></div>
-        </div>
-        <% if current_user?(article.user) %>
-          <div class="separation"></div>
-          <div>
-            <%= link_to "削除", article, method: :delete, data: { confirm: "削除しますか?" } %>
-            &ensp;|&ensp;<%= link_to "編集", edit_article_path(article) %>
+          <div class="flex_container">
+            <div class="condition add_margin_right_27">文章難易度</div>
+            <div class="checkbox">
+              <% evaluations.each do |eva| %>
+                <%= f.check_box :difficulty_select, { multiple: true, class: "space" }, eva, nil %>
+                <span class="letter_white">
+                  <%= eva %>
+                </span>
+              <% end %>
+            </div> 
+          </div>
+          <div class="flex_container">
+            <div class="condition">期日</div>
+            <div class="input_term">
+                <%= f.date_field :term_from %>
+                <span class="letter_white">
+                  ~
+                </span>
+                <%= f.date_field :term_to %>
+            </div>
           </div>
         <% end %>
       </div>
-    <% end %>
-    <%== pagy_bootstrap_nav(@pagy) %>
+    </div>
+
+    <div class="sum_question_article">
+      <% if @matched_articles.nil? %>
+        <div>合計記事数 / <%= Article.count %></div>
+      <% else %>
+        <div>検索結果 / <%= @matched_articles.count %>件</div>
+      <% end %>
+    </div>
+    <div class="personal_question_article_list">
+      <% if Article.any? %>
+        <% @articles.each do |article| %>
+          <div class="an_item">
+            <div class="content">
+              <div class="title">
+                <%= link_to article.title, browsing_article_path(article) %>
+              </div>
+              <div class="flex">
+                <div class="flex_item_adjustment">文章の正しさ&thinsp;/&thinsp;<%= article.accuracy_text %></div>
+                <div class="flex_item_adjustment">文章難易度&thinsp;/&thinsp;<%= article.difficultylevel_text %></div>
+                <div>最終修正日&thinsp;/&thinsp;<%= article.updated_at %></div>
+              </div>
+              <div class="flex">
+                <div class="flex_item_adjustment">小学生向け&thinsp;:&thinsp;<%= ApplicationRecord.inspect_level(article.Eschool_level) %></div>
+                <div class="flex_item_adjustment">中学生向け&thinsp;:&thinsp;<%= ApplicationRecord.inspect_level(article.JHschool_level) %></div>
+                <div>高校生向け&thinsp;:&thinsp;<%= ApplicationRecord.inspect_level(article.Hschool_level) %></div>
+              </div>
+              <% if current_user?(article.user) %>
+                <div>
+                  <%= link_to "削除", article, method: :delete, data: { confirm: "削除しますか?" } %>
+                  &ensp;&ensp;<%= link_to "編集", edit_article_path(article) %>
+                </div>
+              <% end %>
+            </div>
+          </div>
+          <div class="distinction_line"></div>
+        <% end %>
+        <div class="pagenation">
+          <%== pagy_bootstrap_nav(@pagy) %>
+        </div>
+      <% else %>
+        <strong>まだ作成されていません</strong>
+      <% end %>
+    </div>
   <% else %>
     <div class="select_article_question_tab">
       <div class="article_tab">
-        <%= render 'article_selected' %>
+        <%= render partial: 'article_selected', locals: { color: "not_black" } %>
       </div>
       <div class="question_tab">
-        <%= render 'question_selected' %>
+        <%= render partial: 'question_selected', locals: { color: "black" } %>
       </div>
     </div>
-    <div class="search_form">
-      <%= form_with url: searchresult_matched_questions_path, method: :get, local: true do |f| %>
-
-        <div class="search">  
-          <%= f.text_field :content, class: "search_input" %>
-          <%= f.submit '検索', class: "button_size btn btn-primary" %>
-        </div>
-
-        <div class="flex_container">
-          <div class="condition">文章の正確さ</div>
-          <% #url:https://apidock.com/rails/ActionView/Helpers/FormHelper/check_box %>
-          <% evaluations = [1,2,3,4,5] %>
-          <div class="checkbox">
-            <% evaluations.each do |eva| %>
-              <%= f.check_box :accuracy_select, { multiple: true, class: "space" }, eva, nil %>
-              <%= eva %>
-            <% end %>
+    <div class="home_search_form">
+      <div class="adjust_position">
+        <div class="form_name">検索フォーム</div>
+        <div class="link_line_design add_margin_bottom"></div>
+        <%= form_with url: home_path, method: :get, local: true do |f| %>
+          <div><%= hidden_field_tag :model, "Question" %></div>
+          <%= hidden_field_tag :use_form, "true" %>
+          <div class="search">
+            <%= f.text_field :content, class: "search_input" %>
+            <%= f.submit '検索', class: "button_size btn btn-primary" %>
           </div>
-        </div>
-
-        <div class="flex_container">
-          <div class="condition">文章難易度</div>
-          <div class="checkbox">
-            <% evaluations.each do |eva| %>
-              <%= f.check_box :difficulty_select, { multiple: true, class: "space" }, eva, nil %>
-              <%= eva %>
-            <% end %>
-          </div> 
-        </div>
-
-        <div class="flex_container">
-          <div class="condition">期日</div>
-          <div class="input_term">
-              <%= f.date_field :term_from %> ~
-              <%= f.date_field :term_to %>
-          </div>
-        </div>
-
-        <% select_solve = [false,true] %>
-        <div class="flex_container">
-          <div class="condition">
-            解決/未解決
-          </div>
-          <div class="checkbox">
-              <% select_solve.each do |s| %>
-                <%= f.check_box :solve, { multiple: true, class: "space" }, s, nil %>
-                <% if s %>
-                  <%= "解決" %>
-                <% else %>
-                  <%= "未解決" %>
-                <% end %>
+          <div class="flex_container">
+            <div class="condition">文章の正確さ</div>
+            <% #url:https://apidock.com/rails/ActionView/Helpers/FormHelper/check_box %>
+            <% evaluations = [1,2,3,4,5] %>
+            <div class="checkbox">
+              <% evaluations.each do |eva| %>
+                <%= f.check_box :accuracy_select, { multiple: true, class: "space" }, eva, nil %>
+                <span class="letter_white">
+                  <%= eva %>
+                </span>
               <% end %>
+            </div>
           </div>
-        </div>
+          <div class="flex_container">
+            <div class="condition add_margin_right_27">文章難易度</div>
+            <div class="checkbox">
+              <% evaluations.each do |eva| %>
+                <%= f.check_box :difficulty_select, { multiple: true, class: "space" }, eva, nil %>
+                <span class="letter_white">
+                  <%= eva %>
+                </span>
+              <% end %>
+            </div>
+          </div>
+          <% select_solve = [false,true] %>
+          <div class="flex_container">
+            <div class="condition add_margin_right_16">
+              解決/未解決
+            </div>
+            <div class="checkbox">
+                <% select_solve.each do |s| %>
+                  <%= f.check_box :solve, { multiple: true, class: "space" }, s, nil %>
+                  <% if s %>
+                    <span class="letter_white">
+                      <%= "解決" %>
+                    </span>
+                  <% else %>
+                    <span class="letter_white">
+                      <%= "未解決" %>
+                    </span>
+                  <% end %>
+                <% end %>
+            </div>
+          </div>
+          <div class="flex_container">
+            <div class="condition">期日</div>
+            <div class="input_term">
+                <%= f.date_field :term_from %>
+                <span class="letter_white">
+                  ~
+                </span>
+                <%= f.date_field :term_to %>
+            </div>
+          </div>
+        <% end %>
+      </div>
+    </div>
+
+    <div class="sum_question_article">
+      <% if @matched_questions.nil? %>
+        <div>合計質問数 / <%= Question.count %></div>
+      <% else %>
+        <div>検索結果 / <%= @matched_questions.count%>件</div>
       <% end %>
     </div>
-    <% @questions.each do |question| %>
-      <div class="an_item interspace_items">
-        <div>
-          <%= link_to question.title, browsing_question_path(question) %>
-        </div>
-        <div class="flex">
-          <div>文章の正しさ:<%= question.accuracy_text %>&ensp;/&ensp;</div>
-          <div>文章難易度:<%= question.difficultylevel_text %>&ensp;/&ensp;</div>
-          <div>最終修正日:<%= question.updated_at %></div>
-        </div>
-        <div class="flex">
-          <div>小学生向け:<%= ApplicationRecord.inspect_level(question.Eschool_level) %>&ensp;/&ensp;</div>
-          <div>中学生向け:<%= ApplicationRecord.inspect_level(question.JHschool_level) %>&ensp;/&ensp;</div>
-          <div>高校生向け:<%= ApplicationRecord.inspect_level(question.Hschool_level) %></div>
-        </div>
-        <% if question.solve %>
-          <div class="solve_question">
-            解決
+    <div class="personal_question_article_list">
+      <% if Question.any? %>
+        <% @questions.each do |question| %>
+          <div class="an_item">
+            <div class="content">
+              <div class="title">
+                <%= link_to question.title, browsing_question_path(question) %>
+              </div>
+              <div class="flex">
+                <div class="flex_item_adjustment">文章の正しさ&thinsp;/&thinsp;<%= question.accuracy_text %></div>
+                <div class="flex_item_adjustment">文章難易度&thinsp;/&thinsp;<%= question.difficultylevel_text %></div>
+                <div>最終修正日&thinsp;/&thinsp;<%= question.updated_at %></div>
+              </div>
+              <div class="flex">
+                <div class="flex_item_adjustment">小学生向け&thinsp;:&thinsp;<%= ApplicationRecord.inspect_level(question.Eschool_level) %></div>
+                <div class="flex_item_adjustment">中学生向け&thinsp;:&thinsp;<%= ApplicationRecord.inspect_level(question.JHschool_level) %></div>
+                <div>高校生向け&thinsp;:&thinsp;<%= ApplicationRecord.inspect_level(question.Hschool_level) %></div>
+              </div>
+              <% if question.solve %>
+                <div class="solve_question">
+                  解決
+                </div>
+              <% else %>
+                <div class="not_solve_question">
+                  未解決
+                </div>
+              <% end %>
+              <% if current_user?(question.user) %>
+                <div>
+                  <%= link_to "削除", question, method: :delete, data: { confirm: "削除しますか?" } %>
+                  &ensp;&ensp;<%= link_to "編集", edit_question_path(question) %>
+                </div>
+              <% end %>
+            </div>
           </div>
-        <% else %>
-          <div class="not_solve_question">
-            未解決
-          </div>
+          <div class="distinction_line"></div>
         <% end %>
-        <% if current_user?(question.user) %>
-          <div class="separation"></div>
-          <div>
-            <%= link_to "削除", question, method: :delete, data: { confirm: "削除しますか?" } %>
-            &ensp;|&ensp;<%= link_to "編集", edit_question_path(question) %>
-          </div>
-        <% end %>
-      </div>
-    <% end %>
-    <%== pagy_bootstrap_nav(@pagy) %>
+        <div class="pagenation">
+          <%== pagy_bootstrap_nav(@pagy) %>
+        </div>
+      <% else %>
+        <strong>まだ作成されていません</strong>
+      <% end %>
+    </div>
   <% end %>
 <% else %>
 <div class="image_display">
