--- a/app/views/articles/browsing.html.erb
+++ b/app/views/articles/browsing.html.erb
@@ -1,141 +1,159 @@
 <% provide(:title, "Reading the Article")%>
 
-<div class="browse_question_article_flex">
-  <div class="main_view">
-    <div class="title">
-      <%= @article.title %>
-    </div>
-    <hr>
-    <div class="user_info">
-      <div class="info_content">
-        <div>
-          <% if @article.user.avatar? %>
-            <div class="avatar_img">
-              <%= image_tag @article.user.avatar.thumb_min.url , class: "avatar" %>
-            </div>
-          <% else %>
-            <%= render 'shared/default_avatar' %>
-          <% end %>
+<div class="browse_question_article">
+  <div class="title_etc">
+    <div class="user_name_avatar">
+      <% if @article.user.avatar? %>
+        <div class="avatar_img">
+          <a href="<%= user_path(@article.user) %>">
+            <%= image_tag @article.user.avatar.thumb_min.url , class: "avatar" %>
+          </a>
         </div>
-        <div class="name">
-          <a href="<%= user_path(@article.user) %>"><%= @article.user.name %></a>
-        </div>
-      </div>
-      <div class="selfintrodution">
-        <%= @article.user.selfintrodution %>
-      </div>
-    </div>
-    <div class="other_info">
-      <div class="items">
-        <div class="nice_button">
-          <% if current_user != @article.user %>
-            <% if current_user.sum_nice_per_user.include?(@article) %>
-              <%= render 'notnice' %>
-            <% else %>
-              <%= render 'nice' %>
-            <% end %>
-          <% else %>
-            <div class="author">
-              nice計
-            </div>
-          <% end%>
-        </div>
-        <div id="number_nice">
-          <%= @article.sum_nice_per_article.count %>
-        </div>
-      </div>
-      <div class="items">
-        <div class="bookmark_button">
-          <% if current_user != @article.user %>
-            <% if current_user.sum_articlebookmark_per_user.include?(@article) %>
-              <%= render 'notbookmark' %>
-            <% else %>
-              <%= render 'bookmark' %>
-            <% end %>
-          <% else %>
-            <div class="author">
-              bookmark計
-            </div>
-          <% end%>
-        </div>
-        <div id="number_bookmark">
-          <%= @article.sum_bookmark_per_article.count %>
-        </div>
-      </div>
-    </div>
-    <div class="text">
-      <%= @article.articletext %>
-    </div>
-    <div class="comment_section">
-      <div class="mark_for_user">
-        コメント
-      </div>
-      <% @article.article_comments.each do |comment| %>
-        <div class="existing_comment">
-          <div class="comment_user">
-            <% if comment.user.avatar? %>
-              <div class="commenter_avatar">
-                <%= image_tag comment.user.avatar.thumb_min.url , class: "avatar" %>
-              </div>
-            <% else %>
-              <%= render 'shared/default_avatar' %>
-            <% end %>
-            <div class="name">
-              <%= comment.user.name %>
-            </div>
-          </div>
-          <div class="comment">
-            <%= comment.comment %>
-          </div>
-          <% if comment.user == current_user %>
-            <div class="delete">
-              <%= link_to "削除", article_comment_path(comment), method: :delete, data: { confirm: "削除しますか?" } %>
-            </div>
-            <div class="good_statistics">
-              <div class="sum_good_mark">
-                good計<br>
-              </div>
-              <%= comment.nice_to_article_comments.count %>
-            </div>
-          <% else %>
-            <% if NiceToArticleComment.find_by(user_id: current_user.id, article_comment_id: comment.id) %>
-              <div class="changeable_info">
-                <div class="changeable_button">
-                  <%= render partial: "notgood", locals: { comment: comment, article: @article } %>
-                </div>
-                <div id="changeable_sum_nice">
-                  <%= comment.nice_to_article_comments.count %>
-                </div>
-              </div>
-            <% else %>
-              <div class="changeable_info">
-                <div class="changeable_button">
-                  <%= render partial: "good", locals: { comment: comment, user: current_user, article: @article } %>
-                </div>
-                <div id="changeable_sum_nice">
-                  <%= comment.nice_to_article_comments.count %>
-                </div>
-              </div>
-            <% end %>
-          <% end %>
+      <% else %>
+        <div class="avatar_img">
+          <a href="<%= user_path(@article.user) %>">
+            <%= render 'shared/default_min_avatar' %>
+          </a>
         </div>
       <% end %>
-      <div class="new_comment">
-        <%= form_with(model: @article.article_comments.build, local: true) do |f| %>
-
-          <div><%= f.hidden_field :article_id, :value => @article.id %></div>
-          <div><%= f.hidden_field :user_id, :value => current_user.id %></div>
-
-          <div class="richtext_form">
-            <%= f.label :comment, "コメント投稿", class: "form-label" %>
-            <%= f.rich_text_area :comment, {class: "trix-content form_height"} %>
+      <div class="name">
+        <%= @article.user.name %><%= "a" * 100 %>
+      </div>
+    </div>
+    <div class="date">
+      <div class="create">
+        作成日&thinsp;&thinsp;<%= ApplicationRecord.date_expression_change(@article.created_at) %>
+      </div>
+      <div class="update">
+        最終修正日&thinsp;&thinsp;<%= ApplicationRecord.date_expression_change(@article.updated_at) %>
+      </div>
+    </div>
+    <div class="title">
+      <%= @article.title %><%= "a" * 100 %>
+    </div>
+  </div>
+  <div class="distinction_line">
+  </div>
+  <div class="button_info">
+    <div class="items">
+      <div class="nice_button">
+        <% if current_user != @article.user %>
+          <% if current_user.sum_nice_per_user.include?(@article) %>
+            <%= render 'notnice' %>
+          <% else %>
+            <%= render 'nice' %>
+          <% end %>
+        <% else %>
+          <div class="author">
+            nice計
           </div>
-
-          <div class="submit_button">
-            <%= f.submit "コメント投稿", class: "btn btn-primary" %>
+        <% end%>
+      </div>
+      <div id="number_nice">
+        <%= @article.sum_nice_per_article.count %>
+      </div>
+    </div>
+    <div class="items">
+      <div class="bookmark_button">
+        <% if current_user != @article.user %>
+          <% if current_user.sum_articlebookmark_per_user.include?(@article) %>
+            <%= render 'notbookmark' %>
+          <% else %>
+            <%= render 'bookmark' %>
+          <% end %>
+        <% else %>
+          <div class="author">
+            bookmark計
           </div>
+        <% end%>
+      </div>
+      <div id="number_bookmark">
+        <%= @article.sum_bookmark_per_article.count %>
+      </div>
+    </div>
+  </div>
+  <div class="article_body_mark">
+    記事本体
+  </div>
+  <div class="distinction_line">
+  </div>
+  <div class="article_body">
+    <%= @article.articletext %>
+  </div>
+  <div class="comment_section">
+    <div class="mark_for_user">
+      コメント
+    </div>
+    <% @article.article_comments.each do |comment| %>
+      <div class="existing_comment">
+        <div class="comment_user">
+          <% if comment.user.avatar? %>
+            <div class="commenter_avatar">
+              <%= image_tag comment.user.avatar.thumb_mid.url , class: "avatar" %>
+            </div>
+          <% else %>
+            <div class="commenter_avatar">
+              <%= render 'shared/default_avatar' %>
+            </div>
+          <% end %>
+          <div class="name">
+            <%= comment.user.name %>
+          </div>
+        </div>
+        <div class="comment">
+          <%= comment.comment %>
+        </div>
+        <% if comment.user == current_user %>
+          <div class="delete">
+            <%= link_to "削除", article_comment_path(comment), method: :delete, data: { confirm: "削除しますか?" } %>
+          </div>
+          <div class="good_statistics">
+            <div class="sum_good_mark">
+              good計<br>
+            </div>
+            <%= comment.nice_to_article_comments.count %>
+          </div>
+        <% else %>
+          <% if NiceToArticleComment.find_by(user_id: current_user.id, article_comment_id: comment.id) %>
+            <div class="changeable_info">
+              <div class="changeable_button">
+                <%= render partial: "notgood", locals: { comment: comment, article: @article } %>
+              </div>
+              <div id="changeable_sum_nice">
+                <%= comment.nice_to_article_comments.count %>
+              </div>
+            </div>
+          <% else %>
+            <div class="changeable_info">
+              <div class="changeable_button">
+                <%= render partial: "good", locals: { comment: comment, user: current_user, article: @article } %>
+              </div>
+              <div id="changeable_sum_nice">
+                <%= comment.nice_to_article_comments.count %>
+              </div>
+            </div>
+          <% end %>
         <% end %>
       </div>
+    <% end %>
+    <div class="new_comment">
+      <div class="post_comment_mark">
+        コメント投稿
+      </div>
+      <div class="distinction_line margin_bottom">
+      </div>
+      <%= form_with(model: @article.article_comments.build, local: true) do |f| %>
+        <div><%= f.hidden_field :article_id, :value => @article.id %></div>
+        <div><%= f.hidden_field :user_id, :value => current_user.id %></div>
+        <div class="richtext_form">
+          <%= f.rich_text_area :comment, {class: "trix-content form_height"} %>
+        </div>
+        <div class="submit_button">
+          <div>
+            <%= f.submit "コメント投稿", class: "btn btn-primary" %>
+          </div>
+        </div>
+      <% end %>
     </div>
   </div>
 </div>
