--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -1,22 +1,30 @@
 <% provide(:title, "新パスワード入力") %>
-<h1>新パスワード入力</h1>
 
 <%= form_with(model: @user, url: password_reset_path(params[:id]), local: true) do |f| %>
 
     <%= render 'shared/error_messages', object: f.object %>
     <%= hidden_field_tag :email, @user.email %>
 
-    <div class="input_form">
-        <%= f.label :password, "パスワード", class: "form-label" %>
-        <%= f.password_field :password, class: "form-control" %>
-    </div>
+    <div class="form_inclosure">
+        <div class="new_password">
+            新パスワード入力
+        </div>
+        <div class="link_line_design replace_left create_bottom_margin">
+        </div>
+        <div class="input_form">
+            <%= f.label :password, "パスワード", class: "form-label" %>
+            <%= f.password_field :password, class: "form-control" %>
+        </div>
 
-    <div class="input_form">
-        <%= f.label :password_confirmation, "パスワード確認", class: "form-label" %>
-        <%= f.password_field :password_confirmation, class: "form-control" %>
-    </div>
+        <div class="input_form">
+            <%= f.label :password_confirmation, "パスワード確認", class: "form-label" %>
+            <%= f.password_field :password_confirmation, class: "form-control" %>
+        </div>
 
-    <div class="submit_button">
-        <%= f.submit "パスワード更新", class: "btn btn-primary" %>
+        <div class="submit_button">
+            <div>
+                <%= f.submit "パスワード更新", class: "btn btn-primary" %>
+            </div>
+        </div>
     </div>
 <% end %>
