--- a/app/views/password_resets/new.html.erb
+++ b/app/views/password_resets/new.html.erb
@@ -12,7 +12,9 @@
       <%= f.email_field :email, class: "form-control" %>
     </div>
     <div class="submit_button">
+      <div>
       <%= f.submit "送信", class: "btn btn-primary" %>
+      </div>
     </div>
   </div>
 <% end %>
