--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -86,7 +86,7 @@
           <div class="flex">
             <div class="flex_item_adjustment">文章の正しさ&thinsp;/&thinsp;<%= question.accuracy_text %></div>
             <div class="flex_item_adjustment">文章難易度&thinsp;/&thinsp;<%= question.difficultylevel_text %></div>
-            <div>最終修正日&thinsp;/&thinsp;<%= question.updated_at %></div>
+            <div>最終修正日&thinsp;/&thinsp;<%= ApplicationRecord.date_expression_change(question.updated_at) %></div>
           </div>
           <div class="flex">
             <div class="flex_item_adjustment">小学生向け&thinsp;:&thinsp;<%= ApplicationRecord.inspect_level(question.Eschool_level) %></div>
