--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,67 +1,73 @@
 <% provide(:title, "Edit User")%>
-<h1>アカウント更新</h1>
-
 
 <%= form_with(model: @user, local: true) do |f| %>
     <%= render 'shared/error_messages', object: f.object %>
+    <div class="form_inclosure">
+        <div class="user_edit_mark">
+            アカウント更新
+        </div>
+        <div class="link_line_design replace_left create_bottom_margin">
+        </div>
+        <div class="input_form">
+            <%= f.label :name, "名前", class: "form-label" %>
+            <%= f.text_field :name, class: "form-control" %>
+        </div>
 
-    <div class="input_form">
-        <%= f.label :name, "名前", class: "form-label" %>
-        <%= f.text_field :name, class: "form-control" %>
-    </div>
+        <div class="input_form">
+            <%= f.label :email, class: "form-label" %>
+            <%= f.email_field :email, class: "form-control" %>
+        </div>
 
-    <div class="input_form">
-        <%= f.label :email, class: "form-label" %>
-        <%= f.email_field :email, class: "form-control" %>
-    </div>
+        <div class="input_form">
+            <%= f.label :password, "パスワード", class: "form-label" %>
+            <%= f.password_field :password, class: "form-control" %>
+        </div>
 
-    <div class="input_form">
-        <%= f.label :password, "パスワード", class: "form-label" %>
-        <%= f.password_field :password, class: "form-control" %>
-    </div>
+        <div class="input_form">
+            <%= f.label :password_confirmation, "パスワード確認", class: "form-label" %>
+            <%= f.password_field :password_confirmation, class: "form-control" %>
+        </div>
 
-    <div class="input_form">
-        <%= f.label :password_confirmation, "パスワード確認", class: "form-label" %>
-        <%= f.password_field :password_confirmation, class: "form-control" %>
-    </div>
+        <div class="input_form">
+            <%= f.label :selfintrodution, "自己紹介", class: "form-label" %>
+            <%= f.text_area :selfintrodution, size: "40x5", class: "form-control" %>
+        </div>
 
-    <div class="input_form">
-        <%= f.label :selfintrodution, "自己紹介", class: "form-label" %>
-        <%= f.text_area :selfintrodution, size: "40x5", class: "form-control" %>
-    </div>
+        <div class="input_form">
+            <%= f.label :avatar, "プロフィール画像", class: "form-label" %>
+            <% if @user.avatar? %>
+                <div class="edit_avatar_flex">
+                    <div class="place_adjustment">
+                        現在の画像
+                    </div>
+                    <div>
+                        <%= image_tag @user.avatar.thumb.url , class: "avatar" %>
+                    </div>
+                </div>
+            <% else %>
+                <div class="edit_avatar_flex">
+                    <div class="place_adjustment">
+                        現在の画像
+                    </div>
+                    <div>
+                        <%= render 'shared/default_large_avatar' %>
+                    </div>
+                </div>
+            <% end %>
+            <%= f.file_field :avatar, class: "form-control" %>
+        </div>
 
-    <div class="input_form">
-        <%= f.label :avatar, "プロフィール画像", class: "form-label" %>
         <% if @user.avatar? %>
-            <div class="edit_avatar_flex">
-                <div class="place_adjustment">
-                    現在の画像
-                </div>
-                <div>
-                    <%= image_tag @user.avatar.thumb.url , class: "avatar" %>
-                </div>
-            </div>
-        <% else %>
-            <div class="edit_avatar_flex">
-                <div class="place_adjustment">
-                    現在の画像
-                </div>
-                <div>
-                    <%= render 'shared/default_large_avatar' %>
-                </div>
+            <div class="input_form">
+                <%= f.label :remove_avatar, "プロフィール画像消去", class: "form-label" %>
+                <%= f.check_box :remove_avatar %>
             </div>
         <% end %>
-        <%= f.file_field :avatar, class: "form-control" %>
-    </div>
 
-    <% if @user.avatar? %>
-        <div class="input_form">
-            <%= f.label :remove_avatar, "プロフィール画像消去", class: "form-label" %>
-            <%= f.check_box :remove_avatar %>
+        <div class="submit_button">
+            <div>
+                <%= f.submit "アカウント更新", class: "btn btn-primary" %>
+            </div>
         </div>
-    <% end %>
-
-    <div class="submit_button">
-        <%= f.submit "アカウント更新", class: "btn btn-primary" %>
     </div>
 <% end %>
