--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -40,7 +40,9 @@
         </div>
         
         <div class="submit_button">
-            <%= f.submit "アカウント作成", class: "btn btn-primary" %>
+            <div>
+                <%= f.submit "アカウント作成", class: "btn btn-primary" %>
+            </div>
         </div>
     </div>
 <% end %>
